# ml_dl_2023

./: README.md  pyproject.toml
vorschau/: Evaluierung mit Python.ipynb  NLP.ipynb  Pre-Processing - Fehlwerte ersetzen & Pre-Processing Pipelines.ipynb
vorschau/.ipynb_checkpoints/: 00_Das erste eigene Programm-checkpoint.ipynb  Clustering mit Scikit-Learn-checkpoint.ipynb  Erstes Machine Learning Modell mit Python-checkpoint.ipynb  Evaluierung mit Python-checkpoint.ipynb  Klassifikation mit Scikit-Learn-checkpoint.ipynb  NLP-checkpoint.ipynb  Regression mit Scikit-Learn-checkpoint.ipynb  ann_cnn-checkpoint.ipynb
vorschau/full_example/: 08_Solution_Classification.ipynb  ml_workflow.ipynb
vorschau/manual/: 04_Model_Validation_Hyperparameters.ipynb  05_Linear_Models.ipynb  07_Decision_Trees.ipynb  07_Random_Forest.ipynb  08_Dimensionality_Reduction.ipynb  09_Clustering.ipynb
vorschau/manual/.ipynb_checkpoints/: 05_Linear_Models-checkpoint.ipynb  07_Decision_Trees-checkpoint.ipynb
